// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header with different title renders an element 1`] = `
<header
  className="Header__StyledHeader-rax5po-0 eSFArN"
/>
`;

exports[`Header with different title renders an element with props title 1`] = `
<header
  className="Header__StyledHeader-rax5po-0 eSFArN"
>
  test title
</header>
`;
